# SYCL_compilation_examples

./: .gitignore  README.md  hello_world_1.2.1.cpp  hello_world_2020.cpp
.modulefiles/: AdaptiveCpp.lua  ComputeCpp.lua  hipSYCL.lua  triSYCL.lua
AdaptiveCpp/: Makefile
AdaptiveCpp/cmake/: CMakeLists.txt
ComputeCpp/: Makefile
ComputeCpp/cmake/: CMakeLists.txt
hipSYCL/: Makefile
hipSYCL/cmake/: CMakeLists.txt
icpx/: Makefile
icpx/cmake/: CMakeLists.txt
oneAPI/: Makefile
oneAPI/cmake/: CMakeLists.txt
triSYCL/: Makefile
triSYCL/cmake/: CMakeLists.txt
